--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -5,3 +5,5 @@ PRODUCT_BUNDLE_IDENTIFIER=com.ilkinbayramov.ninjatalk.NinjaTalk$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
+
+FRAMEWORK_SEARCH_PATHS=$(inherited) $(SRCROOT)/../composeApp/build/bin/iosSimulatorArm64/$(CONFIGURATION)Framework
